docs/send/knowledge-base/v2.0/readme/workflow-di-notifica.md
---
description: Informazioni utili sul Workflow della Notifica
---

# Workflow di Notifica

## Diagramma degli stati <a href="#diagramma-degli-stati" id="diagramma-degli-stati"></a>

<figure><img src="../.gitbook/assets/NotificationWorkflowNoPaid.drawio.png" alt=""><figcaption></figcaption></figure>

### **Descrizione di stato sintetica della notifica nei casi di invio Multi-destinatario**: <a href="#descrizione-di-stato-sintetica-della-notifica-nei-casi-di-invio-multi-destinatario" id="descrizione-di-stato-sintetica-della-notifica-nei-casi-di-invio-multi-destinatario"></a>

* La descrizione di stato sintetica della notifica passa a `DELIVERED` quando si concludono tutti i tentativi di invio della notifica per tutti i destinatari ed almeno un destinatario è stato raggiunto (per via digitale o per via cartacea).
* La descrizione di stato sintetica della notifica passa a `UNREACHABLE` quando tutti i destinatari non sono raggiungibili.
* La descrizione di stato sintetica della notifica passa a `EFFECTIVE_DATE` se la notifica è stata consegnata ad almeno uno dei destinatari (`DELIVERED`) oppure quando tutti i destinatari non sono raggiungibili (`UNREACHABLE`) ed è trascorso il tempo necessario al perfezionamento per decorrenza termini per almeno uno di questi.\
  **NOTA**: _Si evidenzia che il passaggio della descrizione a_ `EFFECTIVE_DATE` _NON influenza in alcun modo il grado di perfezionamento degli altri destinatari. Infatti il Perfezionamento è una caratteristica tipica del destinatario e non è impattata in alcun modo da come viene descritto lo stato sintetico della notifica._
* La descrizione di stato sintetica della notifica passa a `VIEWED` quando almeno uno dei destinatari ha fatto accesso alla notifica.\
  **NOTA**: _destinatari differenti possono, entrando sul dettaglio della notifica, vedere descrizioni diverse (Perfezionata per presa visione/Visualizzata) in dipendenza del momento di prima visualizzazione sia precedente o successivo alla decorrenza termini._

### Stati della notifica <a href="#stati-della-notifica" id="stati-della-notifica"></a>

<table data-header-hidden data-full-width="true"><thead><tr><th></th><th></th><th></th></tr></thead><tbody><tr><td><strong>Stato</strong></td><td><strong>Label Stato UI</strong></td><td><strong>Descrizione</strong></td></tr><tr><td><code>IN_VALIDATION</code></td><td>*</td><td>notifica depositata in attesa di validazione.</td></tr><tr><td><code>ACCEPTED</code></td><td>Depositata</td><td>L'ente ha depositato la notifica con successo</td></tr><tr><td><code>REFUSED</code></td><td>*</td><td>Notifica rifiutata a seguito della fallita validazione</td></tr><tr><td><code>DELIVERING</code></td><td>Invio in corso</td><td>L'invio della notifica è in corso</td></tr><tr><td><code>DELIVERED</code></td><td>Consegnata</td><td>La notifica è stata consegnata ad almeno un destinatari al termine del ciclo di tutti i tentativi di notifica.</td></tr><tr><td><code>VIEWED</code></td><td>Avvenuto accesso</td><td>Il destinatario ha fatto accesso alla notifica.</td></tr><tr><td><code>EFFECTIVE_DATE</code></td><td>Perfezionata per decorrenza termini</td><td>Il destinatario non ha letto la notifica entro il termine stabilito</td></tr><tr><td><code>UNREACHABLE</code></td><td>Destinatario irreperibile</td><td>Il destinatario non è reperibile</td></tr><tr><td><code>CANCELLED</code>**</td><td>Notifica annullata</td><td>La transita in questo stato a seguito dell’annullamento da parte del mittente.</td></tr></tbody></table>

### Eventi di Timeline <a href="#eventi-di-timeline" id="eventi-di-timeline"></a>

<table data-header-hidden><thead><tr><th width="358"></th><th></th></tr></thead><tbody><tr><td><strong>Evento</strong></td><td><strong>Descrizione evento / EventId</strong></td></tr><tr><td>SENDER_ACK_CREATION_REQUEST</td><td><p>Invio della richiesta di creazione dell'atto opponibile a terzi di presa in carico per il mittente a safe storage</p><p><code>SENDERACK_LEGALFACT_CREATION_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1</code></p></td></tr><tr><td>VALIDATE_NORMALIZE_ADDRESSES_REQUEST</td><td><p>Invio della richiesta di validazione e normalizzazione indirizzi fisici presenti nella richiesta di notifica</p><p><code>VALIDATE_NORMALIZE_ADDRESSES_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1</code></p></td></tr><tr><td>NORMALIZED_ADDRESS</td><td><p>Ricezione esito normalizzazione indirizzo</p><p><code>NORMALIZED_ADDRESS.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></p></td></tr><tr><td><strong>REQUEST_REFUSED</strong></td><td>Richiesta di notifica rifiutata per fallimento di validazione</td></tr><tr><td></td><td><code>REQUEST_REFUSED.IUN_KWKU-JHXN-HJXM-202304-U-1</code></td></tr><tr><td><strong>REQUEST_ACCEPTED</strong></td><td>Richiesta di notifica accettata a seguito dei controlli di validazione</td></tr><tr><td></td><td><code>REQUEST_ACCEPTED.IUN_KWKU-JHXN-HJXM-202304-U-1</code></td></tr><tr><td>AAR_CREATION_REQUEST</td><td><p>Invio della richiesta di creazione dell'AAR (Avviso di Avvenuta Ricezione) a safe storage</p><p><code>AAR_CREATION_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></p></td></tr><tr><td>AAR_GENERATION</td><td>Generazione dell’AAR (Avviso di Avvenuta Ricezione)</td></tr><tr><td></td><td><code>AAR_GEN.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>SEND_COURTESY_MESSAGE</td><td>Invio di un messaggio di cortesia</td></tr><tr><td></td><td><code>SEND_COURTESY_MESSAGE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.COURTESYADDRESSTYPE_SMS</code></td></tr><tr><td>GET_ADDRESS</td><td>Disponibilità dell’indirizzo specifico (domicilio digitale di piattaforma, domicilio digitale speciale, domicilio digitale generale, indirizzo fisico sulla notifica o sui registri nazionali)</td></tr><tr><td></td><td><code>GET_ADDRESS.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.ATTEMPT_1</code></td></tr><tr><td>PUBLIC_REGISTRY_CALL</td><td>Richiesta ai registri pubblici per ottenere domicilio digitale generale o per ottenere indirizzo fisico da ANPR, da registro della imprese, da anagrafe tributaria.</td></tr><tr><td></td><td><code>NATIONAL_REGISTRY_CALL.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.DELIVERYMODE_DIGITAL.CONTACTPHASE_CHOOSE_DELIVERY.ATTEMPT_1</code></td></tr><tr><td>PUBLIC_REGISTRY_RESPONSE</td><td>Ricevuta la risposta dei registri pubblici</td></tr><tr><td></td><td><code>NATIONAL_REGISTRY_RESPONSE.CORRELATIONID_corr12345</code></td></tr><tr><td>SCHEDULE_ANALOG_WORKFLOW</td><td>Pianificazione del workflow per invio cartaceo</td></tr><tr><td></td><td><code>SCHEDULE_ANALOG_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1</code></td></tr><tr><td>SCHEDULE_DIGITAL_WORKFLOW</td><td>Pianificazione del workflow per invio digitale (PEC) del secondo tentativo in caso di fallimento del primo.</td></tr><tr><td></td><td><code>SCHEDULE_DIGITAL_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.ATTEMPT_1</code></td></tr><tr><td>PREPARE_DIGITAL_DOMICILE</td><td><p>Preparazione per l’invio dell’avviso digitale.</p><p>Va a valutare la timeline per capire quale sarà il prossimo indirizzo da usare.</p></td></tr><tr><td></td><td><code>PREPARE_DIGITAL_DOMICILE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.ATTEMPT_0.CORRELATIONID_1234</code></td></tr><tr><td><strong>SEND_DIGITAL_DOMICILE</strong></td><td>Invio digitale dell’avviso di notifica</td></tr><tr><td></td><td><code>SEND_DIGITAL.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.REPEAT_false.ATTEMPT_0</code></td></tr><tr><td>SEND_DIGITAL_PROGRESS</td><td>Tentativo di Invio PEC ad un determinato indirizzo.</td></tr><tr><td></td><td><code>DIGITAL_PROG.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.REPEAT_false.ATTEMPT_0.IDX_1</code></td></tr><tr><td>SEND_DIGITAL_FEEDBACK</td><td>Ottenuto esito ad un invio digitale</td></tr><tr><td></td><td><code>SEND_DIGITAL_FEEDBACK.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.SOURCE_PLATFORM.ATTEMPT_1</code></td></tr><tr><td>SCHEDULE_REFINEMENT</td><td>Pianificato il perfezionamento per decorrenza termini</td></tr><tr><td></td><td><code>SCHEDULE_REFINEMENT_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td><strong>REFINEMENT</strong></td><td>Perfezionamento per decorrenza termini</td></tr><tr><td></td><td><code>REFINEMENT.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>DIGITAL_DELIVERY_CREATION_REQUEST</td><td><p>Invio della richiesta di creazione dell'atto opponibile a terzi di chiusura del workflow digitale a safe storage</p><p><code>DIGITAL_DELIVERY_CREATION_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></p></td></tr><tr><td><strong>DIGITAL_SUCCESS_WORKFLOW</strong></td><td>Completato con successo il workflow di invio digitale.</td></tr><tr><td></td><td><code>DIGITAL_SUCCESS_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td><strong>DIGITAL_FAILURE_WORKFLOW</strong></td><td><p>Completato con fallimento il workflow di invio digitale: <strong>tutti i tentativi di invio ai domicili digitali sono falliti</strong></p><p>NOTA: in caso di DIGITAL_FAILURE_WORKFLOW piattaforma notifiche:</p><ul><li>genera AMR (Avviso di mancato recapito)</li><li>invia la AAR (Avviso di Avvenuta Ricezione) tramite raccomandata semplice e la notifica si considera consegnata.</li></ul></td></tr><tr><td></td><td><code>DIGITAL_FAILURE_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td><strong>ANALOG_SUCCESS_WORKFLOW</strong></td><td>Completato con successo il workflow di invio cartaceo.</td></tr><tr><td></td><td><code>ANALOG_SUCCESS_WORKFLOW.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>ANALOG_FAILURE_WORKFLOW</td><td><p>Completato con fallimento il workflow di invio cartaceo.</p><p>NOTA: se per tutti i destinatari si conclude il workflow con fallimento verrà scatenato l’evento COMPLETELY_UNREACHABLE</p></td></tr><tr><td></td><td><code>ANALOG_FAILURE_WORKFLOW.IUN_123-456-789.RECINDEX_0</code></td></tr><tr><td>COMPLETELY_UNREACHABLE_CREATION_REQUEST</td><td>Invio della richiesta di creazione dell'atto (simile a opponibile a terzi) di completamento con fallimento del workflow di invio cartaceo</td></tr><tr><td></td><td><code>COMPLETELY_UNREACHABLE_CREATION_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>PREPARE_SIMPLE_REGISTERED_LETTER</td><td>Invio richiesta di prepare (preparazione ad invio) raccomandata semplice a paperChannel</td></tr><tr><td></td><td><code>PREPARE_SIMPLE_REGISTERED_LETTER.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>SEND_SIMPLE_REGISTERED_LETTER</td><td>Invio di raccomandata semplice</td></tr><tr><td></td><td><code>SEND_SIMPLE_REGISTERED_LETTER.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td></td><td>Valorizzato <code>details.analogCost</code> con il costo dell’invio cartaceo</td></tr><tr><td>SIMPLE_REGISTERED_LETTER_PROGRESS</td><td>Ricezione informazioni intermedia relative ad una notificazione cartacea semplice</td></tr><tr><td></td><td><code>SIMPLE_REGISTERED_LETTER_PROGRESS.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1.IDX_1</code></td></tr><tr><td></td><td>Possono essere presenti più elementi di send_Analog_progress. Per preservarne l’unicità, si utilizza la tabella di appoggio TimelineCounters, in cui per ogni timeline di SEND_SIMPLE_REGISTERED_LETTER c'è un contatore incrementato in maniera atomica da utilizzare come indice nella costruzione del timelineId di SIMPLE_REGISTERED_LETTER_PROGRESS.</td></tr><tr><td>NOTIFICATION_VIEWED_CREATION_REQUEST</td><td><p>Invio della richiesta di creazione dell'atto opponibile a terzi di presa visione a safe storage</p><p><code>NOTIFICATION_VIEWED_CREATION_REQUEST.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></p></td></tr><tr><td><strong>NOTIFICATION_VIEWED</strong></td><td><p>Visualizzazione della notifica (perfeziona la notifica se non già perfezionata per decorrenza termini o da altro destinatario)</p><p>NOTA: <em>il campo</em> <code>timestamp</code> <em>NON riporta la data di inserimento in timeline ma l'ìstante in cui è stata visualizzata la notifica. Quindi questo elemento risulta con un timestamp precedente l'evento NOTIFICATION_VIEWED_CREATION_REQUEST anche se avviene successivamente. Per questo motivo nello stream questo evento appare dopo NOTIFICATION_VIEWED_CREATION_REQUEST.</em></p></td></tr><tr><td></td><td><code>NOTIFICATION_VIEWED.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>PREPARE_ANALOG_DOMICILE</td><td>Invio richiesta di prepare (preparazione ad invio) cartaceo a paperChannel</td></tr><tr><td></td><td><code>PREPARE_ANALOG_DOMICILE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1</code></td></tr><tr><td>PREPARE_ANALOG_DOMICILE_FAILURE</td><td>Invio cartaceo non possibile: non è stato trovato nessun indirizzo valido per predisporre il tentativo.<br>NOTA: disponibile dalla versione GA2.0</td></tr><tr><td></td><td><code>PREPARE_ANALOG_DOMICILE_FAILURE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1</code></td></tr><tr><td>SEND_ANALOG_PROGRESS</td><td>Ricezione informazioni intermedia relative ad una notificazione cartacea</td></tr><tr><td></td><td><code>SEND_ANALOG_PROGRESS.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1.IDX_1</code></td></tr><tr><td></td><td>Ogni istanza di questo evento rappresenta un aggiornamento riguardante il processo di recapito.<br>Possono essere presenti più elementi di send_Analog_progress. Per preservarne l’unicità, si utilizza la tabella di appoggio TimelineCounters, in cui per ogni timeline di SEND_ANALOG c'è un contatore incrementato in maniera atomica da utilizzare come indice nella costruzione del timelineId di SEND_ANALOG_PROGRESS.</td></tr><tr><td>SEND_ANALOG_DOMICILE</td><td>Invio cartaceo dell’avviso di notifica</td></tr><tr><td></td><td><code>SEND_ANALOG_DOMICILE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1</code></td></tr><tr><td></td><td>Valorizzato <code>details.analogCost</code> con il costo dell’invio cartaceo</td></tr><tr><td>SEND_ANALOG_FEEDBACK</td><td>Ricezione esito dell'invio cartaceo</td></tr><tr><td></td><td>Il valore del campo <code>details.responseStatus</code> contiene l’esito della notifica digitale.<br>Può assumere i valori di <code>OK</code> o <code>KO</code> .</td></tr><tr><td></td><td><code>SEND_ANALOG_FEEDBACK.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0.ATTEMPT_1</code></td></tr><tr><td><strong>COMPLETELY_UNREACHABLE</strong></td><td><p>Il destinatario è risultato irraggiungibile.</p><p>A questo evento è collegato il documento di deposito di avventuta ricezione avente come <em>legalFactType</em>: <strong>ANALOG_FAILURE_DELIVERY.</strong></p></td></tr><tr><td></td><td><code>COMPLETELY_UNREACHABLE.IUN_KWKU-JHXN-HJXM-202304-U-1.RECINDEX_0</code></td></tr><tr><td>PROBABLE_SCHEDULING_ANALOG_DATE</td><td>Rappresenta la data in cui si presume che abbia inizio il processo di notificazione cartecea. L’evento è specifico per il destinatario a seguito del primo invio di un messaggio di cortesia, non sarà generato in caso di assenza del messaggio di cortesia. Se la notifica viene letta dal destinatario prima di questa data, l’invio cartaceo sarà sicuramente non avviato.</td></tr><tr><td></td><td><code>PROBABLE_SCHEDULING_ANALOG_DATE.IUN_MZQR-VKDM-MJEN-202305-M-1.RECINDEX_0</code></td></tr><tr><td>NOTIFICATION_CANCELLATION_REQUEST</td><td><p>Evento di richiesta di cancellazione della notifica dal parte del mittente.</p><p>NOTA: disponibile dalla versione GA2.0</p></td></tr><tr><td><strong>NOTIFICATION_CANCELLED</strong></td><td><p>Evento di fine della cancellazione della notifica dal parte del mittente.<br>Questo evento fa passare la notifica in stato <code>CANCELLED</code></p><p>NOTA: disponibile dalla versione GA2.0</p></td></tr><tr><td>NOTIFICATION_PAID</td><td>Evento di comunicazione di pagamento. Questo evento viene inserito in timeline quando la PA mittente comunica di aver ricevuto il pagamento tramite l’API paymentEventsRequestPagoPa.<br>NOTA: questo evento non ha effetto sulla workflow della notifica, ma serve per comunicare al destinatario che la PA ha segnalato il pagamento</td></tr></tbody></table>

### Note ulteriori

#### Stati ed eventi

Non esiste una correlazione 1:1 tra evento di timeline e transizione di stato.\
Non tutti gli eventi danno luogo ad una transizione di stato; gli eventi che possono provocare un cambiamento di stato della notifica sono evidenziati in **grassetto**.\
Gli eventi di timeline non sono un dettaglio dello stato della notifica, ma sono eventi collegati alla notifica, al mittente o ai suoi destinatari.

#### Workflow digitale e retry <a href="#workflow-digitale-e-retry" id="workflow-digitale-e-retry"></a>

In presenza di domicilio digitale ed indipendentemente dalla presenza o meno di recapiti di cortesia (SMS, email, AppIO), il flusso digitale prevede il tentativo di invio della notifica al domicilio digitale del destinatario in base ad una sequenza predefinita (domicilio digitale: di piattaforma, speciale, generale), che si interrompe non appena il server del destinatario ha accettato la comunicazione (e non quando il destinatario ha letto la PEC).\
PN effettua 2 cicli di invio a distanza di 7 o 9 giorni ed in caso di fallimento di entrambi i cicli, è generato l’AMR con lo specifico elemento di timeline **DIGITAL\_FAILURE\_WORKFLOW**.\
PN invia AAR (Avviso di Avvenuta Ricezione) tramite raccomandata semplice e la notifica si considera consegnata.

#### Workflow cartaceo <a href="#workflow-cartaceo" id="workflow-cartaceo"></a>

In assenza di domicilio digitale ed in assenza di recapiti di cortesia (SMS, email, AppIO) è eseguita la consegna dell’AAR in modalità cartacea attraverso 890 o Raccomandata A/R (è in capo alla PA stabilire quale dei due canali utilizzare). PN riceve dall’operatore postale gli aggiornamenti sullo stato della consegna e la copia digitale conforme di ogni documento generato durante la notificazione.

#### Attestazioni opponibili ai terzi <a href="#attestazioni-opponibili-ai-terzi" id="attestazioni-opponibili-ai-terzi"></a>

La piattaforma genera documenti in formato PDF, firmati digitalmente da PagoPA con Sigillo Digitale Qualificato così come definito dal CAD e dotati di marcatura temporale certificata al verificarsi di alcuni eventi rilevanti. Queste attestazioni, nei casi in cui ne è prevista la generazione, possono essere recuperate con il servizio apposito di “download atto opponibile a terzi“.\
Le Attestazioni opponibili ai terzi sono:

* **Notifica presa in carico** - generato dall’evento **REQUEST\_ACCEPTED** ed avente come _legalFactType: **SENDER\_ACK**_
* **Notifica digitale** - generato dall’evento **DIGITAL\_SUCCESS\_WORKFLOW** ed avente come _legalFactType: **DIGITAL\_DELIVERY**_
* **Mancato recapito digitale** - generato dall’evento **DIGITAL\_FAILURE\_WORKFLOW** ed avente come _legalFactType: **DIGITAL\_DELIVERY**_
* **Avvenuto accesso** - generato dall’evento **NOTIFICATION\_VIEWED** ed avente come _legalFactType: **RECIPIENT\_ACCESS**_
* **Malfunzionamento e ripristino** - generata nei casi di downtime del servizio PND, scaricabile direttamente dalla pagina di Piattaforma Notifiche nella sezione “**Stato della Piattaforma**”

Sono esposte nel portale anche le attestazioni prodotte da sistemi esterni quali:

* **Ricevute XML dell’esito relativo all’invio PEC** - generate dagli eventi **SEND\_DIGITAL\_PROGRESS** e **SEND\_DIGITAL\_FEEDBACK**, ed aventi come _legalFactType: **PEC\_RECEIPT**_
* **Ricevuta di accettazione raccomandata** - generato dall’evento **SEND\_ANALOG\_PROGRESS** ed avente come _legalFactType: **ANALOG\_DELIVERY**_
  * Possono essere presenti più elementi di send\_Analog\_progress. Per preservarne l’unicità, si utilizza la tabella di appoggio TimelineCounters, in cui per ogni timeline di SEND\_ANALOG c'è un contatore incrementato in maniera atomica da utilizzare come indice nella costruzione del timelineId di SEND\_ANALOG\_PROGRESS.
* **Ricevuta di consegna raccomandata** e **Ricevuta di mancata consegna raccomandata** – generato dall’evento **SEND\_ANALOG\_FEEDBACK** ed avente come _legalFactType: **ANALOG\_DELIVERY**_

#### Perfezionamento per decorrenza termini della notifica <a href="#perfezionamento-per-decorrenza-termini-della-notifica" id="perfezionamento-per-decorrenza-termini-della-notifica"></a>

**Invio Digitale**

Nel caso di flusso digitale, il perfezionamento della notifica avviene nelle seguenti modalità:

* la notifica si perfeziona per il destinatario dopo **7 giorni dalla consegna dell’AAR** attraverso PEC o SERCQ
* la notifica si perfeziona per il destinatario dopo **15 giorni dalla generazione dell’AMR**, che avviene in seguito al fallimento della consegna digitale.

**Invio Cartaceo**

Nel caso di flusso analogico, il perfezionamento della notifica avviene nelle seguenti modalità:

* la notifica si perfeziona per il destinatario dopo **10 giorni dalla consegna dell’AAR** in modalità cartacea.
* la notifica si perfeziona per il destinatario dopo **10 giorni dalla mancata consegna dell’AAR** in modalità cartacea.

#### Irreperibilità del destinatario <a href="#irreperibilita-del-destinatario" id="irreperibilita-del-destinatario"></a>

Nel caso in cui la notifica analogica dovesse terminare con un evento di irreperibilità del destinatario la piattaforma metterà a disposizione il documento di “DEPOSITO AVVISO DI AVVENUTA RICEZIONE”

Il documento di “**Deposito di avvenuta ricezione”** è generato e collegato all’evento di timeline **COMPLETELY\_UNREACHABLE** con l’identificativo _legalFactType_: **ANALOG\_FAILURE\_DELIVERY.**
